Add layout code for title, and navbar section

--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,14 @@ body {
    background-color: #222222;
    font-size: 1.5rem;
    line-height: 1.5;
+   letter-spacing: 1px;
    font-family: 'Montserrat', 'Open Sans', sans-serif;
    /* font-family: 'Montserrat', sans-serif; */
    /* font-family: 'Open Sans', sans-serif; */
 }
 
 .container {
-   width: 95%;
+   width: 100%;
    margin: 0 auto; 
 }
 img {
@@ -35,9 +36,6 @@ p {
    margin: 1rem auto;
 }
 
-span {
-  color: #ffffff;
-}
 input {
    margin: 5px 10px;
    padding: 3px 6px;
@@ -57,6 +55,18 @@ ol {
    color: red;
 }
 
+.titleh1 {
+  text-align: center;
+  margin: 2rem auto;
+}
+
+.btn {
+  margin: 0 2rem;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+}
+
 .container01 {
   width: 80%;
   margin: 0 auto;
@@ -65,6 +75,7 @@ ol {
 .row {
   text-align: center;
   display: flex;
+  justify-content: center;
 }
 
 .square {
@@ -74,3 +85,11 @@ ol {
   background: #ee1343;
   border-radius: 2rem;
 }
+
+.navbar {
+  margin: 2rem 0;
+  background-color: #ffffff;
+  color: #13940e;
+  text-align: center;
+}
+
