--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,35 @@ ol {
   margin: 2rem auto;
 }
 
-.btn {
-  margin: 0 2rem;
+.btn-reset,
+.btn-easy,
+.btn-hard {
+  font-weight: 900;
+  margin: 0 .5rem;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
+  text-transform: uppercase;
+}
+
+.btn-reset {
+  color: #287dec;
+  background-color: #ffffff;
+}
+
+.btn-easy,
+.btn-hard {
+  color: #287dec;
+  background-color: #ffffff;
+}
+
+.selected {
+  background-color: #287dec;
+  color: #ffffff;
+}
+
+span {
+  margin: 0 2rem;
 }
 
 .container01 {
@@ -72,7 +96,13 @@ ol {
   margin: 0 auto;
 }
 
-.row {
+.row-top3 {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.row-bottom3 {
   text-align: center;
   display: flex;
   justify-content: center;
