Fix reset background color logic for the game

--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,17 @@ ol {
 .red {
    color: red;
 }
-
-.titleh1 {
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3rem;
+}
+.title-box {
   text-align: center;
-  margin: 2rem auto;
+  margin: 0;
+  padding: 2rem 0;
+  text-transform: uppercase;
 }
 
 .btn-reset,
@@ -89,11 +96,13 @@ ol {
 
 span {
   margin: 0 2rem;
+  color: #287dec;
+  font-weight: 700;
 }
 
 .container01 {
   width: 80%;
-  margin: 0 auto;
+  margin: 3rem auto;
 }
 
 .row-top3 {
@@ -117,9 +126,8 @@ span {
 }
 
 .navbar {
-  margin: 2rem 0;
+  margin: 0;
   background-color: #ffffff;
-  color: #13940e;
   text-align: center;
 }
 
